[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.188", features = ["derive"]}
serde_json = "1.0.107"
regex = "1.9.5"
serde_repr = "0.1.16"
#httparse = "1.8.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
tungstenite = {version = "0.20.1", features = ["native-tls"]}
http = "0.2.9"
lazy_id = "0.1.0"